page title alignment fixed

--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -16,6 +16,13 @@
     &::before {
       width: 70%;
     }
+
+    .page-title {
+      text-align: center;
+      @include mq(medium) {
+        text-align: left;
+      }
+    }
   }
 
   &__header:only-child {
